[BACKLOG-43025] Update startup scripts to include add-opens for java.time. Needed for Gson to handle java.time.LocalDate fields in the marketplace code.